# remember-all-calls

./: .env.example  .gitignore  Dockerfile  README.md  deploy-webapp.sh  deploy.sh  pyproject.toml
app/: database.py  main.py  models.py
terraform/: ecs.tf  main.tf  outputs.tf  variables.tf
webapp/: Dockerfile  app.py  pyproject.toml
webapp/static/css/: styles.css
webapp/templates/: base.html  call_detail.html  dashboard.html  upload.html
